# starlark-go-nethttp

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  delete.go  delete_test.go  do.go  do_test.go  get.go  get_test.go  go.mod  module.go  module_test.go  patch.go  patch_test.go  post.go  post_test.go  put.go  put_test.go  request.go  request_test.go  response.go  response_test.go
cmd/nethttp/: BUILD.bazel  main.go
