load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/pcj/starlark-go-nethttp/cmd/nethttp",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@net_starlark_go//repl:go_default_library",
        "@net_starlark_go//resolve:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
    ],
)

go_binary(
    name = "nethttp",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
